<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textPressToGo_SettingsAndOrganisorPage"
        style="@style/txtPoppinsbold16"
        android:layout_width="407dp"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="Press to go to organisor's mainpage"
        app:layout_constraintBottom_toTopOf="@+id/buttonGotoOrganisorPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameStackellipseone"
        tools:text="Press to go to organisor's mainpage" />

    <LinearLayout
        android:id="@+id/buttonGotoOrganisorPage"
        style="@style/groupStyleteal_1"
        android:layout_width="190dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textPressToNotify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPressToGo_SettingsAndOrganisorPage">

        <TextView
            android:id="@+id/textOrganisorPage"
            style="@style/txtPoppinsbold17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_weight="0.83"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="Organisor Page"
            tools:text="Organisor Page" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameStackellipseone"
        android:layout_width="409dp"
        android:layout_height="194dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageUndrawdoneche"
            android:layout_width="146dp"
            android:layout_height="@dimen/_152pxh"
            android:layout_gravity="top|start"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_undrawdoneche"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_undrawdoneche" />

        <FrameLayout
            android:id="@+id/buttonBack_SettingsAndOrganisorPage"
            style="@style/groupStyleteal_A200cornerRadius"
            android:layout_width="@dimen/_82pxh"
            android:layout_height="@dimen/_51pxv"
            android:layout_marginEnd="@dimen/_10pxh">

            <ImageView
                android:id="@+id/imageArrowleft"
                android:layout_width="@dimen/_23pxh"
                android:layout_height="@dimen/_25pxh"
                android:layout_gravity="top|start"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_arrowleft" />
        </FrameLayout>

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="@dimen/_153pxh"
            android:layout_height="@dimen/_112pxh"
            android:layout_gravity="top|end"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_ellipse1"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_ellipse1" />

        <ImageView
            android:id="@+id/imageEllipseTwo"
            android:layout_width="@dimen/_97pxh"
            android:layout_height="@dimen/_153pxh"
            android:layout_gravity="top|end"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_marginBottom="@dimen/_13pxv"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_ellipse2"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_ellipse2" />

        <TextView
            android:id="@+id/txtWelcome"
            style="@style/txtPoppinsbold20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="@dimen/_67pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_67pxh"
            android:ellipsize="end"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="Settings"
            android:textSize="24sp"
            tools:text="Settings" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGeoTracking_SettingsPage"
        style="@style/btnSolidRounded"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_47pxv"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_29pxh"
        android:paddingTop="@dimen/_10pxv"
        android:paddingEnd="@dimen/_28pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:text="Geo-Tracking: Off"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/imageEllipseThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPressToNotify"
        tools:text="Geo-Tracking: Off" />

    <View
        android:id="@+id/viewEllipseFour"
        android:layout_width="@dimen/_153pxh"
        android:layout_height="@dimen/_153pxh"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="4dp"
        android:background="@drawable/rectangle_bg_teal_a200_77_radius_76_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageEllipseThree"
        android:layout_width="119dp"
        android:layout_height="163dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackToHomepage"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_ellipse3"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_ellipse3" />

    <FrameLayout
        android:id="@+id/buttonBackToHomepage"
        android:layout_width="@dimen/_89pxh"
        android:layout_height="@dimen/_90pxv"
        android:layout_gravity="bottom|start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/_89pxh"
            android:layout_height="@dimen/_90pxh"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_result1"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_result1" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/img_completed_m9ci" />

    <TextView
        android:id="@+id/textPressToNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="Press to turn geo-tracking on/off"
        android:textSize="@dimen/_16pxh"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonGeoTracking_SettingsPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGotoOrganisorPage" />

</androidx.constraintlayout.widget.ConstraintLayout>