...
        android:paddingStart="@dimen/_26pxh"
        android:paddingTop="@dimen/_11pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_10pxv"
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/button_seeQRCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEventDescription_ViewEventPage"
        app:layout_constraintVertical_bias="0.434"
        tools:ignore="Autofill" />

...
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEventDescription_ViewEventPage"
        app:layout_constraintVertical_bias="0.851" />

    <LinearLayout
        android:id="@+id/buttonSignUp"
        style="@style/groupStyleteal_1"
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView_ViewEventPage"
...
