...
        android:gravity="center"
        android:paddingStart="@dimen/_5pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_5pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Share Promo QR"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSavePromoCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/buttonSaveCheckinCode"
...
        android:gravity="center"
        android:paddingStart="@dimen/_5pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_5pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="Share Checkin QR"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveCheckinCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSaveCheckin"
        app:layout_constraintVertical_bias="0.4"
...
