...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarConf" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confYes"
        style="@style/btnSolidRounded"
        android:layout_width="110dp"
        android:layout_height="@dimen/_47pxv"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:gravity="center"
...
